--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title> Natural Disasters </title>
 </head>
 
@@ -25,7 +26,7 @@
         <div class="Align1">
             <center>
                 <img class="img-responsive" src="https://bit.ly/3IQTUfb" title="Earthquakes"
-                    onclick="Expand('https:/', '/bit.ly/3IQTUfb');">
+                    onclick="Expand('https:/', '/bit.ly/3IQTUfb', 'Earthquakes')">
                 <h2> Earthquakes </h2>
             </center>
             <h3> An earthquake is the shaking in the Earth's surface caused by the movement of tectonic
@@ -35,7 +36,7 @@
         <div class="Align2">
             <center>
                 <img class="img-responsive" src="https://bit.ly/3ulvVR8" title="Volcanoes"
-                    onclick="Expand('https:/', '/bit.ly/3ulvVR8')">
+                    onclick="Expand('https:/', '/bit.ly/3ulvVR8', 'Volcanoes')">
                 <h2> Volcanoes </h2>
             </center>
             <h3> A volcano is a hole in the Earth's crust that spews lava, gas, and ash. It can take many years for the
@@ -43,7 +44,8 @@
         </div>
         <div class="Align1">
             <center>
-                <img class="img-responsive" src="https://bit.ly/3rg7UcE" title="Tsunamis" onclick="Expand('https:/', '/bit.ly/3rg7UcE')">
+                <img class="img-responsive" src="https://bit.ly/3rg7UcE" title="Tsunamis"
+                    onclick="Expand('https:/', '/bit.ly/3rg7UcE', 'Tsunamis')">
                 <h2> Tsunamis </h2>
             </center>
             <h3> A tsunami is a large wave caused by earthquakes or volcanoes underwater. Most tsunamis can go as high
@@ -51,7 +53,8 @@
         </div>
         <div class="Align2">
             <center>
-                <img class="img-responsive" src="https://bit.ly/3udUfV6" title="Hurricanes" onclick="Expand('https:/', '/bit.ly/3udUfV6')">
+                <img class="img-responsive" src="https://bit.ly/3udUfV6" title="Hurricanes"
+                    onclick="Expand('https:/', '/bit.ly/3udUfV6', 'Hurricanes')">
                 <h2> Hurricanes </h2>
             </center>
             <h3> A hurricane is a large, swirling storm formed in the sea. They can reach speeds between 119 kmph (74
@@ -60,7 +63,8 @@
         </div>
         <div class="Align1">
             <center>
-                <img class="img-responsive" src="https://bit.ly/3KWJs7B" title="Tornadoes" onclick="Expand('https:/', '/bit.ly/3KWJs7B')">
+                <img class="img-responsive" src="https://bit.ly/3KWJs7B" title="Tornadoes"
+                    onclick="Expand('https:/', '/bit.ly/3KWJs7B', 'Tornadoes')">
                 <h2> Tornadoes </h2>
             </center>
             <h3> A tornado is a violent rotating column of air that can reach speeds of up to 500 kmph (300 mph). They
@@ -68,7 +72,8 @@
         </div>
         <div class="Align2">
             <center>
-                <img class="img-responsive" src="https://bit.ly/3Gdu97e" title="Droughts" onclick="Expand('https:/', '/bit.ly/3Gdu97e')">
+                <img class="img-responsive" src="https://bit.ly/3Gdu97e" title="Droughts"
+                    onclick="Expand('https:/', '/bit.ly/3Gdu97e', 'Droughts')">
                 <h2> Droughts </h2>
             </center>
             <h3> A drought is a period of time where little to no rain falls, making the ground very dry. They can last
@@ -77,7 +82,8 @@
         </div>
         <div class="Align1">
             <center>
-                <img class="img-responsive" src="https://bit.ly/3IThfgu" title="Blizzards" onclick="Expand('https:/', '/bit.ly/3IThfgu')">
+                <img class="img-responsive" src="https://bit.ly/3IThfgu" title="Blizzards"
+                    onclick="Expand('https:/', '/bit.ly/3IThfgu', 'Blizzards')">
                 <h2> Blizzards </h2>
             </center>
             <h3> A blizzard is a long-lasting snowstorm with fast winds and heavy snowfall. During this period, the
@@ -85,7 +91,8 @@
         </div>
         <div class="Align2">
             <center>
-                <img class="img-responsive" src="https://bit.ly/3rYkc8u" title="Wildfires" onclick="Expand('https:/', '/bit.ly/3rYkc8u')">
+                <img class="img-responsive" src="https://bit.ly/3rYkc8u" title="Wildfires"
+                    onclick="Expand('https:/', '/bit.ly/3rYkc8u', 'Wildfires')">
                 <h2> Wildfires </h2>
             </center>
             <h3> A wildfire is an uncontrollable forest fire generating in combustible vegetation. These are more common
@@ -94,10 +101,17 @@
     </div>
     <center>
         <div id="Footer">
-            <h4> Images found from <a href="https://unsplash.com/" target="_blank"> Unsplash. </a> Click on the images to maximize them. </h4>
+            <h4> Images found from <a href="https://unsplash.com/" target="_blank"> Unsplash. </a> Click on
+                the images
+                to maximize them. </h4>
         </div>
     </center>
-    <div id="ImageCloseUp"><img id="Image" onclick="Shrink()"></div>
+    <center>
+        <div id="ImageCloseUp">
+            <img id="Image" class="img-responsive" onclick="Open()">
+            <button class="btn material-icons" title="Close" onclick="Close()"> close </button>
+        </div>
+    </center>
     <script src="main.js"></script>
 </body>
 
